// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a Select contentBefore and contentAfter 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      class="pongo-input-wrapper ___1i1bfhx f10pi13n f1ewtqcl ftuwxu6 fv68sux fp6vxd fa4t5tb flvyvdh fc467gg f8qjfyk fk6fouc f4d9j23 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw f1arxnym fqzc6w8 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 fzmdvw2 fbh30h8"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu10"
      style="--pongo-input-line-height: 45px; --pongo-input-width: 200px;"
    >
      <span
        class="___1xz89bp f22iagw f122n59 f4d9j23 f1ewtqcl fyuhxbn f1ysjbbf f1qo5dib frdkuqy"
      >
        hello
      </span>
      <select
        class="___d3s0d50 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx f1klrjes f1f9t5xu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
      >
        <option
          disabled=""
          value=""
        />
        <option
          disabled=""
        >
          This isa test
        </option>
        <option
          disabled=""
          value="test"
        >
          Test
        </option>
      </select>
      <span
        class="___1qv4dbs f22iagw f122n59 f4d9j23 f1ewtqcl fyuhxbn f1ysjbbf f1qo5dib f81rol6"
      >
        test
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a basic Select 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      class="pongo-input-wrapper ___1i1bfhx f10pi13n f1ewtqcl ftuwxu6 fv68sux fp6vxd fa4t5tb flvyvdh fc467gg f8qjfyk fk6fouc f4d9j23 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw f1arxnym fqzc6w8 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 fzmdvw2 fbh30h8"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu7"
      style="--pongo-input-line-height: 45px; --pongo-input-width: 200px;"
    >
      <select
        class="___d3s0d50 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx f1klrjes f1f9t5xu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
      >
        <option
          disabled=""
          value=""
        />
      </select>
      <span
        class="___1qv4dbs f22iagw f122n59 f4d9j23 f1ewtqcl fyuhxbn f1ysjbbf f1qo5dib f81rol6"
      >
        <svg
          class="___16pu995 f14t3ns0 fmrv4ls fuaaxji fq4mcun frvgh55"
          focusable="false"
          style="--pongo-icon-fill: var(--inherit);"
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            style="transform: translateY(10%); transition: transform .1s linear;"
          >
            <rect
              height="160"
              rx="80"
              style="transform-origin: center; transform: rotate(-45deg); transition: transform .1s linear;"
              width="908"
              x="941"
              y="944"
            />
            <rect
              height="160"
              rx="80"
              style="transform-origin: center; transform: rotate(45deg); transition: transform .1s linear;"
              width="908"
              x="198"
              y="944"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a basic Select with an option 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      class="pongo-input-wrapper ___1i1bfhx f10pi13n f1ewtqcl ftuwxu6 fv68sux fp6vxd fa4t5tb flvyvdh fc467gg f8qjfyk fk6fouc f4d9j23 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw f1arxnym fqzc6w8 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 fzmdvw2 fbh30h8"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu8"
      style="--pongo-input-line-height: 45px; --pongo-input-width: 200px;"
    >
      <select
        class="___d3s0d50 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx f1klrjes f1f9t5xu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
      >
        <option
          disabled=""
          value=""
        />
      </select>
      <span
        class="___1qv4dbs f22iagw f122n59 f4d9j23 f1ewtqcl fyuhxbn f1ysjbbf f1qo5dib f81rol6"
      >
        <svg
          class="___16pu995 f14t3ns0 fmrv4ls fuaaxji fq4mcun frvgh55"
          focusable="false"
          style="--pongo-icon-fill: var(--inherit);"
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            style="transform: translateY(10%); transition: transform .1s linear;"
          >
            <rect
              height="160"
              rx="80"
              style="transform-origin: center; transform: rotate(-45deg); transition: transform .1s linear;"
              width="908"
              x="941"
              y="944"
            />
            <rect
              height="160"
              rx="80"
              style="transform-origin: center; transform: rotate(45deg); transition: transform .1s linear;"
              width="908"
              x="198"
              y="944"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a basic Select with an option and Header 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      class="pongo-input-wrapper ___1i1bfhx f10pi13n f1ewtqcl ftuwxu6 fv68sux fp6vxd fa4t5tb flvyvdh fc467gg f8qjfyk fk6fouc f4d9j23 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw f1arxnym fqzc6w8 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 fzmdvw2 fbh30h8"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu9"
      style="--pongo-input-line-height: 45px; --pongo-input-width: 200px;"
    >
      <select
        class="___d3s0d50 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx f1klrjes f1f9t5xu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
      >
        <option
          disabled=""
          value=""
        />
        <option
          disabled=""
        >
          This isa test
        </option>
        <option
          disabled=""
          value="test"
        >
          Test
        </option>
      </select>
      <span
        class="___1qv4dbs f22iagw f122n59 f4d9j23 f1ewtqcl fyuhxbn f1ysjbbf f1qo5dib f81rol6"
      >
        <svg
          class="___16pu995 f14t3ns0 fmrv4ls fuaaxji fq4mcun frvgh55"
          focusable="false"
          style="--pongo-icon-fill: var(--inherit);"
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            style="transform: translateY(10%); transition: transform .1s linear;"
          >
            <rect
              height="160"
              rx="80"
              style="transform-origin: center; transform: rotate(-45deg); transition: transform .1s linear;"
              width="908"
              x="941"
              y="944"
            />
            <rect
              height="160"
              rx="80"
              style="transform-origin: center; transform: rotate(45deg); transition: transform .1s linear;"
              width="908"
              x="198"
              y="944"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a disabled Select and applies prop to native select element 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      class="pongo-input-wrapper ___136cyr8 f10pi13n f1ewtqcl ftuwxu6 fv68sux fp6vxd fa4t5tb flvyvdh fc467gg f8qjfyk fk6fouc f4d9j23 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw f1arxnym fqzc6w8 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo flm3n1z f1pltsua f15x2d8x fhngjcl f5qrn4q f1kndqco f1kc1xys f1d7l9b4"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu11"
      style="--pongo-input-line-height: 45px; --pongo-input-width: 200px;"
    >
      <span
        class="___8e1e8x0 f22iagw f122n59 f4d9j23 f1ewtqcl fyuhxbn favx1wl f1hc2z27 frdkuqy"
      >
        hello
      </span>
      <select
        class="___1d81o3i f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx f1klrjes f1f9t5xu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 fdrzuqr favx1wl fgbidd3 f13ta7ih f1arxnym"
      >
        <option
          disabled=""
          value=""
        />
        <option
          disabled=""
        >
          This isa test
        </option>
        <option
          disabled=""
          value="test"
        >
          Test
        </option>
      </select>
      <span
        class="___kv53i30 f22iagw f122n59 f4d9j23 f1ewtqcl fyuhxbn favx1wl f1hc2z27 f81rol6"
      >
        test
      </span>
    </span>
  </div>
</body>
`;

exports[`Select renders a label Select 1`] = `
<body>
  <div>
    <span
      aria-haspopup="menu"
      class="pongo-input-wrapper ___1i1bfhx f10pi13n f1ewtqcl ftuwxu6 fv68sux fp6vxd fa4t5tb flvyvdh fc467gg f8qjfyk fk6fouc f4d9j23 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 f1ern45e f1n71otn f1h8hb77 f1deefiw f1arxnym fqzc6w8 fuzzvh5 fxf9f1y frdto5n ff0gctb f3zr33r f8g0ba1 f5uakvk frcipv9 f199l62q f1pa2qi2 fyqop9u f1ooiv2t f1bwkb58 fiio4mc f1m5ya7j fc8z0qo fmw406p f12c27rx f17thq47 f12kdog7 f5qrn4q f1kndqco f1kc1xys f1d7l9b4 f16n8puj f1ci6z1z flfiaez f170vdtw fg4eyww f1cngt4b f17x5ctf fbk6y72 f1uajmgh f11t0hz4 f2v3se5 f18saz9o f80sxui f19q3xa0 fzmdvw2 fbh30h8"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2}}"
      id="menu13"
      style="--pongo-input-line-height: 45px; --pongo-input-width: 200px;"
    >
      <label
        class="pongo-input-label ___1mytw70 f1euv43f f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f12huiiw f1ov4xf1 f161knb0 fpnytvn f9j3dip f1ysjbbf fk6fouc fz5stix f1q148li f1cmbuwj f1sdsnyy f1aehjj5 f1xqy1su ftuwxu6 fi64zpg fc7pyfw f122n59 fvz7k9s frurm3d fpa1rl3 fuzzvh5 fxf9f1y ff0gctb f8g0ba1 fsa65no f5uakvk frcipv9 fsm07gi f1qo5dib f188r07x fuv0bne fb322o2"
        for="select-label12"
      >
        hello
      </label>
      <select
        class="___d3s0d50 f1lmfglv fibjyge f1abmfm4 f9yszdx f1nbblvp f81rol6 f1ov4xf1 frdkuqy f1ern45e f1n71otn f1h8hb77 f1deefiw f1rbvai9 f13ju9t4 f1lh17z1 f1dlw1sp f1ewtqcl fqerorx f1klrjes f1f9t5xu f1l02sjl f3rmtva f2hkw1w fakqst0 fdm5f4k f1fr6u07 f1k6fduh fc467gg f1vw2ftv f13ta7ih f1arxnym"
        id="select-label12"
      >
        <option
          disabled=""
          value=""
        />
      </select>
      <span
        class="___1qv4dbs f22iagw f122n59 f4d9j23 f1ewtqcl fyuhxbn f1ysjbbf f1qo5dib f81rol6"
      >
        <svg
          class="___16pu995 f14t3ns0 fmrv4ls fuaaxji fq4mcun frvgh55"
          focusable="false"
          style="--pongo-icon-fill: var(--inherit);"
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            style="transform: translateY(10%); transition: transform .1s linear;"
          >
            <rect
              height="160"
              rx="80"
              style="transform-origin: center; transform: rotate(-45deg); transition: transform .1s linear;"
              width="908"
              x="941"
              y="944"
            />
            <rect
              height="160"
              rx="80"
              style="transform-origin: center; transform: rotate(45deg); transition: transform .1s linear;"
              width="908"
              x="198"
              y="944"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
</body>
`;
